--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "Andreas Wehr <iam@grml.in> (https://github.com/grmlin)"
   ],
   "dependencies": {
+    "command-exists": "^1.2.9",
     "commander": "^6.0.0",
+    "eol": "^0.9.1",
     "execa": "^4.0.3",
     "lodash": "^4.17.19",
     "ow": "^0.17.0",
@@ -65,6 +67,7 @@
     "lint:md": "remark . -qfo",
     "pretest": "npm run lint",
     "test": "cross-env NODE_ENV=test jest",
-    "test-coverage": "cross-env NODE_ENV=test jest --coverage"
+    "test-coverage": "cross-env NODE_ENV=test jest --coverage",
+    "test-watch": "cross-env NODE_ENV=test jest --watch"
   }
 }
