chore: add coverage to test script

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "lint:js": "eslint",
     "pretest": "npm run lint",
     "release": "npm run pretest && npm run test && standard-version",
-    "test": "cross-env NODE_ENV=test jest",
+    "test": "cross-env NODE_ENV=test jest --coverage",
     "test-coverage": "cross-env NODE_ENV=test jest --coverage",
     "test-watch": "cross-env NODE_ENV=test jest --watch"
   }
