--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
+      - run: npm run build
       - run: npm test -- --coverage
