--- a/package.json
+++ b/package.json
@@ -37,11 +37,6 @@
     "jest": "^26.4.2",
     "jest-mock-console": "^1.0.1",
     "prettier": "^2.1.1",
-    "rollup": "^2.26.6",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.3",
-    "rollup-plugin-typescript2": "^0.27.2",
     "standard-version": "^8.0.2",
     "ts-jest": "^26.3.0",
     "typedoc": "^0.19.0",
@@ -56,24 +51,24 @@
     "wsl"
   ],
   "license": "MIT",
-  "main": "./lib/index.js",
-  "module": "./lib/index.es.js",
-  "jsnext:main": "./lib/index.es.js",
-  "types": "./lib/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.es.js",
+  "jsnext:main": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/grmlin/node-wsl"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "tsc",
     "prepack": "npm build",
     "pretest": "npm run lint",
     "test": "cross-env NODE_ENV=test jest",
-    "lint": "eslint '*/**/*.{js,ts,tsx}'",
-    "release": "npm run pretest && npm run test && standard-version",
+    "lint": "eslint .",
+    "release": "npm run test && standard-version",
     "docs": "typedoc source"
   },
   "files": [
-    "lib"
+    "dist"
   ]
 }
