--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "module": "./dist/index.es.js",
   "jsnext:main": "./dist/index.es.js",
   "types": "./dist/index.d.ts",
+  "typings": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/grmlin/node-wsl"
