--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.2",
     "jest-mock-console": "^1.0.1",
+    "mockdate": "^3.0.2",
     "prettier": "^2.1.1",
     "standard-version": "^8.0.2",
     "ts-jest": "^26.3.0",
