--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,7 @@
-name: Test
+# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
+name: Build, docs and tests
 
 on:
   push:
@@ -7,8 +10,7 @@ on:
     branches: [ '**' ]
 
 jobs:
-  test:
-    name: run tests without coverage upload
+  build:
     runs-on: ubuntu-latest
 
     strategy:
@@ -23,4 +25,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
       - run: npm run build
+      - run: npm run docs
       - run: npm test -- --coverage
+
